--- a/Cardiovascular_Risk_Prediction.ipynb
+++ b/Cardiovascular_Risk_Prediction.ipynb
@@ -5,18 +5,21 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
+        "vncDsAP0Gaoa",
+        "FJNUwmbgGyua",
         "w6K7xa23Elo4",
         "yQaldy8SH6Dl",
         "mDgbUHAGgjLW",
+        "HhfV-JJviCcP",
+        "Y3lxredqlCYt",
+        "3RnN4peoiCZX",
+        "x71ZqKXriCWQ",
+        "7hBIi_osiCS2",
         "JlHwYmJAmNHm",
         "35m5QtbWiB9F",
         "PoPl-ycgm1ru",
         "H0kj-8xxnORC",
-        "u3PMJOP6ngxN",
-        "dauF4eBmngu3",
-        "bKJF3rekwFvQ",
         "MSa1f5Uengrz",
-        "GF8Ens_Soomf",
         "0wOQAZs5pc--",
         "K5QZ13OEpz2H",
         "lQ7QKXXCp7Bj",
@@ -90,12 +93,8 @@
         "bn_IUdTipZyH",
         "49K5P_iCpZyH",
         "Nff-vKELpZyI",
-        "kLW572S8pZyI",
-        "dWbDXHzopZyI",
-        "yLjJCtPM0KBk",
         "xiyOF9F70UgQ",
         "7wuGOrhz0itI",
-        "id1riN9m0vUs",
         "578E2V7j08f6",
         "89xtkJwZ18nB",
         "67NQN5KX2AMe",
@@ -4039,24 +4038,24 @@
       "cell_type": "code",
       "source": [
         "## fuction to create dataframe of total outliers and percentage of outliers\n",
-        "def outliers_df(df, list_of_continuous_features):\n",
+        "def outliers_df(df, continuous_features):\n",
         "    outlier_df = pd.DataFrame(columns=['feature', 'lower_limit', 'upper_limit',\n",
         "                                       'IQR', 'total_outliers', 'percentage_outliers(%)'])\n",
-        "    for feature in list_of_continuous_features:\n",
+        "    for feature in continuous_features:\n",
         "        values = df[feature]\n",
         "        q1, q2, q3 = values.quantile([0.25, 0.5, 0.75])\n",
         "        iqr = q3 - q1\n",
-        "        lwr_bound = q1 - 1.5 * iqr\n",
-        "        upr_bound = q3 + 1.5 * iqr\n",
-        "        outliers = values[(values < lwr_bound) | (values > upr_bound)]\n",
+        "        Lower_limit = q1 - 1.5 * iqr\n",
+        "        Upper_limit = q3 + 1.5 * iqr\n",
+        "        outliers = values[(values < Lower_limit) | (values > Upper_limit)]\n",
         "        total_outliers = len(outliers)\n",
-        "        perc_outliers = round(total_outliers * 100 / len(values), 2)\n",
+        "        percentage_outliers = round(total_outliers * 100 / len(values), 2)\n",
         "        outlier_df = outlier_df.append({'feature': feature,\n",
-        "                                        'lower_limit': lwr_bound,\n",
-        "                                        'upper_limit': upr_bound,\n",
+        "                                        'lower_limit': Lower_limit,\n",
+        "                                        'upper_limit': Upper_limit,\n",
         "                                        'IQR': iqr,\n",
         "                                        'total_outliers': total_outliers, \n",
-        "                                        'percentage_outliers(%)': perc_outliers}, \n",
+        "                                        'percentage_outliers(%)': percentage_outliers}, \n",
         "                                        ignore_index=True)\n",
         "    return outlier_df.sort_values(by=['percentage_outliers(%)'], ascending=False)"
       ],
