--- a/Cardiovascular_Risk_Prediction.ipynb
+++ b/Cardiovascular_Risk_Prediction.ipynb
@@ -89,8 +89,6 @@
         "8yEUt7NnHlrM",
         "tEA2Xm5dHt1r",
         "I79__PHVH19G",
-        "Ou-I18pAyIpj",
-        "fF3858GYyt-u",
         "4_0_7-oCpUZd",
         "hwyV_J3ipUZe",
         "3yB-zSqbpUZe",
@@ -99,24 +97,15 @@
         "bn_IUdTipZyH",
         "49K5P_iCpZyH",
         "Nff-vKELpZyI",
+        "kLW572S8pZyI",
+        "dWbDXHzopZyI",
+        "yLjJCtPM0KBk",
         "xiyOF9F70UgQ",
         "7wuGOrhz0itI",
+        "id1riN9m0vUs",
         "578E2V7j08f6",
         "89xtkJwZ18nB",
         "67NQN5KX2AMe",
-        "Iwf50b-R2tYG",
-        "GMQiZwjn3iu7",
-        "WVIkgGqN3qsr",
-        "XkPnILGE3zoT",
-        "Hlsf0x5436Go",
-        "mT9DMSJo4nBL",
-        "c49ITxTc407N",
-        "OeJFEK0N496M",
-        "9ExmJH0g5HBk",
-        "cJNqERVU536h",
-        "k5UmGsbsOxih",
-        "T0VqWOYE6DLQ",
-        "qBMux9mC6MCf",
         "-oLEiFgy-5Pf",
         "C74aWNz2AliB",
         "2DejudWSA-a0",
@@ -136,6 +125,10 @@
         "VFOzZv6IFROw",
         "migG_39TQE9c",
         "TIqpNgepFxVj",
+        "VfCC591jGiD4",
+        "OB4l2ZhMeS1U",
+        "ArJBuiUVfxKd",
+        "4qY1EAkEfxKe",
         "PiV4Ypx8fxKe",
         "TfvqoZmBfxKf",
         "dJ2tPlVmpsJ0",
@@ -149,9 +142,22 @@
         "9PIHJqyupx6M",
         "_-qAgymDpx6N",
         "Z-hykwinpx6N",
+        "G_qdTDiI0L4F",
+        "EKC3U3Jc0RvD",
+        "lE59xRxO0Xm8",
+        "fdFU0GpqfQcP",
+        "Wbpundqk0NTx",
+        "TOz_bgua0S9v",
+        "NjYv8fTA0Z6e",
+        "uoyfmPOrfNCa",
+        "VMbsGEjyfXHz",
+        "9y2RztM7fbvh",
+        "vZw3iLbJfhdd",
+        "ry53IenuflGI",
+        "jKHqZWwgfObS",
+        "q8Pk3O5kfWRO",
         "h_CCil-SKHpo",
         "cBFFvTBNJzUa",
-        "HvGl1hHyA_VK",
         "EyNgTHvd2WFk",
         "KH5McJBi2d8v",
         "iW_Lq9qf2h6X",
@@ -222,13 +228,13 @@
         "\n",
         "The first step in this project is to perform data preprocessing, which includes handling missing values, encoding categorical variables, and scaling numerical variables. After preprocessing, the dataset is split into training and testing sets using a 70:20 ratio.\n",
         "\n",
-        "Various machine learning algorithms are applied to the training data, including logistic regression, KNN, XGBoost, SVC, and random forest. These algorithms are chosen as they have been shown to perform well in cardiovascular risk prediction. The algorithms are trained on the training data, and their performance is evaluated using the testing data.\n",
+        "Various machine learning algorithms are applied to the training data, including logistic regression, KNN, XGBoost, SVC, and random forest, Naive Bayes Classifier. These algorithms are chosen as they have been shown to perform well in cardiovascular risk prediction. The algorithms are trained on the training data, and their performance is evaluated using the testing data.\n",
         "\n",
         "The evaluation metrics used in this project include accuracy, precision, recall, and area under the receiver operating characteristic curve (AUC-ROC). These metrics help in assessing the performance of the machine learning model.\n",
         "\n",
-        "The results show that the random forest algorithm performs the best, with an accuracy of 0.87, precision of 0.86, recall of 0.88, and AUC-ROC of 0.87. This indicates that the model has a good overall performance in predicting cardiovascular risk.\n",
+        "The results show that the XGBoost performs the best, with an accuracy of 0.89, precision of 0.92, recall of 0.85, and AUC-ROC of 0.89. This indicates that the model has a good overall performance in predicting cardiovascular risk.\n",
         "\n",
-        "Further analysis is performed to identify the most important features in the dataset. The feature importance plot shows that age, systolic blood pressure, and total cholesterol levels are the top three important features in predicting cardiovascular risk. This information can help in identifying high-risk individuals and implementing preventive measures.\n",
+        "Further analysis is performed to identify the most important features in the dataset. The feature importance plot shows that age, education, prevalentHyp,and cigarettes per day are the top important features in predicting cardiovascular risk. This information can help in identifying high-risk individuals and implementing preventive measures.\n",
         "\n",
         "In conclusion, this project demonstrates the effectiveness of machine learning techniques in predicting cardiovascular risk using the Framingham Heart Study dataset. The developed machine learning model can be used by healthcare professionals to identify individuals at high risk of cardiovascular disease and take preventive measures to reduce the risk."
       ],
@@ -1303,7 +1309,7 @@
         "id": "DnOaZdaE5Q5t",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 458
         },
         "outputId": "c50074e3-b9a1-4d02-ee7e-f95e75d73971"
       },
@@ -6176,7 +6182,7 @@
         "id": "0tj0mXwJ5zmL",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 385
         },
         "outputId": "7e77090b-19a2-484c-e7d6-8f1b250d3900"
       },
@@ -6223,7 +6229,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 382
         },
         "id": "kfl0rNlbLIa2",
         "outputId": "c8d08090-162a-409c-ffdd-702dadb9747b"
@@ -6297,7 +6303,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 385
         },
         "id": "KRFG-CPLLpKW",
         "outputId": "c03a3600-4dd9-415f-c029-f145f60bff90"
@@ -6344,7 +6350,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 382
         },
         "id": "BaWYkJXrNnB7",
         "outputId": "691d7357-342d-4763-f68f-59f1ad461531"
@@ -6403,7 +6409,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 385
         },
         "id": "T-cebXUOMD1f",
         "outputId": "6c574993-4d90-4178-88c1-7905959027fd"
@@ -6450,7 +6456,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 382
         },
         "id": "_kyl3fdKNoAr",
         "outputId": "b1960560-209b-4f61-c601-72af72ed4961"
@@ -6509,7 +6515,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 385
         },
         "id": "s3vfclhhMHtP",
         "outputId": "d3b38f47-c246-43ed-d2e4-2c30c428b726"
@@ -6556,7 +6562,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 382
         },
         "id": "V90yhd74No4Z",
         "outputId": "e9b44f71-6415-4ed8-ed8a-25ea1142e04f"
@@ -6615,7 +6621,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 385
         },
         "id": "VkvuMoJhMLMK",
         "outputId": "c8ac31a3-f201-402e-e458-1bf357be4692"
@@ -6662,7 +6668,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 382
         },
         "id": "Hz5k_8TYNpk6",
         "outputId": "62c73fc2-8fc5-459d-a348-b2076952a07f"
@@ -6700,6 +6706,24 @@
     {
       "cell_type": "markdown",
       "source": [
+        "#### Do you think that your data needs to be transformed? If yes, which transformation have you used. Explain Why?"
+      ],
+      "metadata": {
+        "id": "nqoHp30x9hH9"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Yes, But we already transformed the data by using logarithmic transformation for outlier removal.But feature Pulse pressure we created later so we checked for best transformation for this feature and got that it also needed logarithmic transformation. "
+      ],
+      "metadata": {
+        "id": "tVSm6CUKESXs"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "**Applying transformation**"
       ],
       "metadata": {
@@ -6720,6 +6744,17 @@
     {
       "cell_type": "code",
       "source": [
+        "# Transform Your data"
+      ],
+      "metadata": {
+        "id": "I6quWQ1T9rtH"
+      },
+      "execution_count": 77,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Applying transformation on the considered column\n",
         "## Logarithmic transformation\n",
         "final_df['pulsePressure']=np.log(final_df['pulsePressure']+1)"
@@ -6728,26 +6763,6 @@
         "id": "O17a-AR5OAfN"
       },
       "execution_count": 76,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#### Do you think that your data needs to be transformed? If yes, which transformation have you used. Explain Why?"
-      ],
-      "metadata": {
-        "id": "nqoHp30x9hH9"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Transform Your data"
-      ],
-      "metadata": {
-        "id": "I6quWQ1T9rtH"
-      },
-      "execution_count": 77,
       "outputs": []
     },
     {
